--- a/public/css/details.css
+++ b/public/css/details.css
@@ -10,27 +10,19 @@
     }
 }
 
-#detailscontainer .modal-backdrop.show {
-    opacity: 1;
-}
-
-#detailscontainer .modal-backdrop {
-    background-color: #343a40;
-}
-
 #detailscontainer .modal-content {
-    background: none;
-    border: 0;
-    -moz-border-radius: 0;
-    -webkit-border-radius: 0;
-    border-radius: 0;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+    background: #343a40;
+    padding: 0;
+}
+
+#detailscontainer .modal-body {
+    padding: 0;
 }
 
 #detailscontainer .modal-header, .modal-footer {
     border: 0;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 #detailscontainer .modal-header .close {
