--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,4 +8,5 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Font Awesome
+$fa-font-path:  "webfonts/" !default;
 @import '~@fortawesome/fontawesome-free/css/all.css';
