--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -64,7 +64,7 @@ html, body {
 
 /* PICTURE */
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
     .info-img {
         border-radius: 0 0 10px 10px;
         padding: 0;
@@ -74,13 +74,15 @@ html, body {
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     .info-img {
         border-radius: 0 10px 10px 0;
         padding: 0;
     }
     .info-img img {
         border-radius: 0 10px 10px 0;
+        width: 100%;
+        height: 100%;
     }
 }
 
